--- a/tagoverflow-viz.html
+++ b/tagoverflow-viz.html
@@ -34,7 +34,7 @@
         function draw() {
             var config = {
                 container_id: "viz",
-                server_url: "bolt://stackdata.neo4jlabs.com:80",
+                server_url: "bolt://1cec42ea.databases.neo4j.io",
                 server_user: "stackoverflow",
                 server_password: "stackoverflow",
                 encrypted: "ENCRYPTION_ON",
