--- a/tagoverflow-viz.html
+++ b/tagoverflow-viz.html
@@ -34,9 +34,9 @@
         function draw() {
             var config = {
                 container_id: "viz",
-                server_url: "bolt://1cec42ea.databases.neo4j.io",
-                server_user: "stackoverflow",
-                server_password: "stackoverflow",
+                server_url: "bolt://localhost:7867",
+                server_user: "neo4j",
+                server_password: "test",
                 encrypted: "ENCRYPTION_ON",
                 trust: "TRUST_CUSTOM_CA_SIGNED_CERTIFICATES",
                 labels: {
