--- a/tagoverflow-viz.html
+++ b/tagoverflow-viz.html
@@ -37,7 +37,7 @@
                 server_url: "bolt://localhost:7687",
                 server_user: "neo4j",
                 server_password: "test",
-                encrypted: "ENCRYPTION_ON",
+                // encrypted: "ENCRYPTION_ON",
                 trust: "TRUST_CUSTOM_CA_SIGNED_CERTIFICATES",
                 labels: {
                     "Tag": {
